REP MD RT dev deployment

--- a/mds/transaction/en/assets/i18n/en.json
+++ b/mds/transaction/en/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "form.title": "Regulatory Transaction Template: Regulatory Enrolment Process (REP)",
+  "form.title": "Regulatory Transaction Template: Regulatory Enrolment Process (REP) for Medical Devices",
   "version": "Version ",
   "top.fromHC": "From <a href='https://www.canada.ca/en/health-canada.html'>Health Canada</a>",
   "top.privacy.statement": "Privacy Notice Statement",
@@ -10,7 +10,7 @@
   "refresh.file.input": "Refresh this page",
   "error":"Error {{number}}:",
   "heading.transaction": "Regulatory Transaction Enrolment",
-  "dossier.id": "Dossier Identifier",
+  "dossier.id": "Dossier Identifier (\"m\" and 6 numbers)",
   "dossier.type": "Dossier Type",
   "manufacturing.company.id": "Manufacturer Company Identifier",
   "manufacturing.contact.id": "Manufacturer Contact Identifier",
@@ -25,25 +25,22 @@
   "meeting.id": "Meeting Identifier",
   "device.name": "Name of Device, as it appears on the label",
   "licence.name": "Proposed licence name",
-  "include.ddt": "Include the Device Details spreadsheet with the corresponding ‘device name change’, sheet completed, with this submission.",
+  "include.ddt": "Include the Device Details Excel File with the corresponding ‘device name change’ sheet completed, with this submission.",
   "request.date": "Date of Request",
   "brief.descr": "Brief Description",
-  "has.ddt": "Device details table included?",
-  "has.app.info": "Application information XML included in transaction?",
+  "has.ddt": "Device Details Excel File included?",
   "fees": "Fees",
   "are.fees": "Are new fees or revised fees associated with this transaction?",
   "billing.company.id": "Billing Company Identifier",
   "billing.contact.id": "Billing Contact Identifier",
-  "completed.fee.required":"A completed fee form is still required, however, the applicable fees will be invoiced.",
+  "completed.fee.required":"The applicable fees will be invoiced; however, a completed fee form is still required.",
   "required": "This field is required",
   "minlength": "Minimum length",
-  "error.mgs.number": "Please specify a number.",
-  "error.mgs.dossier.id": "Dossier Identifier - must be lowercase letter followed by 6 numbers",
+  "error.mgs.dossier.id": "Must be lowercase \"m\" followed by 6 numbers",
   "error.mgs.5.numeric": "Must be 5 numeric value",
   "error.mgs.6.numeric": "Must be 6 numeric value",
   "error.mgs.contact.id": "Must be 5 numeric value",
   "error.mgs.licence.number": "Must be 6 numeric value - Add leading 0 if less than 6 digits",
-  "error.mgs.application.number": "Please specify a valid application number.",
   "error.msg.invalidDate": "The date is not valid",
   "commmon.required.bracket": " (required)",
   "errorSummary.transaction": "Transaction Form",
@@ -53,7 +50,6 @@
   "minNumber5": "(5 numbers)",
   "minNumber6": "(6 numbers)",
   "minNumber8": "(8 numbers)",
-  "minAlphanum6.m": "(\"m\" and 6 numbers)",
   "reason.amend": "Reason for amendment",
   "save.working.copy": "Save Working Copy",
   "generate.final": "Generate Final XML",
@@ -74,14 +70,14 @@
   "proposed.indication": "Proposed purpose/Indication for Use",
   "section.show.option": "[ This section may not be visible. ] ",
   "PROTECTED_B": "Protected \"B\" when completed",
-  "original.manufacturing.company.id": "Orginal Manufacturer's Company Identifier",
+  "original.manufacturing.company.id": "Original Manufacturer's Company Identifier",
   "original.manufacturer.licence.number": "Original Manufacturer's Licence Number",
   "help.load.file.02": "When continuing with a working copy, the format of the file to load should be .hcsc.",
   "help.load.file.03": "When viewing/updating a final XML file, the format of the file to load should be .xml.",
   "help.transaction.01": "The Company identifier must be obtained from the final company XML file, issued by Health Canada.",
   "help.transaction.02": "The Dossier identifier can be obtained from the final dossier XML file or other Health Canada issued document.(e.g. m178974).",
   "help.dossierId.01": "The dossier identifier is a code created by Health Canada to uniquely identify the dossier.  If a dossier ID has not yet been assigned, manufacturers must request for one using the medical device dossier ID request form.",
-  "help.dossierId.02": "The format of a Dossier Identifier is a letter followed by six digits. (e.g. m######).",
+  "help.dossierId.02": "The format of a Dossier Identifier is a lowercase \"m\" followed by six digits. (e.g. m######).",
   "help.contactId": "All regulatory correspondence will be sent to this contact, but the licence will be issued to the Manufacturer. A medical device licence application can be submitted by a third party.",
   "help.deviceClass.01": "Refer to the ",
   "help.deviceClass.02": "Guidance Document - Guidance on the Risk-based Classification System for Non-In Vitro Diagnostic Devices (non-IVDDs)",
@@ -90,5 +86,8 @@
   "help.device.name": "Only one name should be entered in this field. The listed name will be used as the licence name unless it is deemed that a generic licence name is more appropriate to cover all of the devices contained within the licence.",
   "help.licence.number.01": "This number is assigned by Health Canada once a device(s) has been authorized for sale. ",
   "help.licence.number.02": "If the Licence number has not yet been assigned, use 000000.",
-  "help.device.detail": "The identifiers listed in the device details table must appear on and match the identifier listed on the submitted labelling."
+  "help.device.detail.01": "The identifiers listed in the Device Details Excel File must appear on and match the identifier listed on the submitted labelling.",
+  "help.device.detail.02": "Required for all new licence applications, as well as any amendment applications that may impact a manufacturers catalogue listing.",
+  "help.device.detail.03": "The Device Details Excel File is available on the <a href='https://lam-dev.hres.ca/REP-Form/mds_index.html'>REP Index Page for Medical Devices.</a>"
+
 }
