--- a/mds/transaction/fr/assets/i18n/fr.json
+++ b/mds/transaction/fr/assets/i18n/fr.json
@@ -1,5 +1,5 @@
 {
-  "form.title": "Modèle de transaction réglementaire: Processus d'inscription réglementaire (PIR)",
+  "form.title": "Modèle de transaction réglementaire: Processus d'inscription réglementaire (PIR) pour les instruments médicaux",
   "version": "Version ",
   "top.fromHC": "De <a href='https://www.canada.ca/fr/sante-canada.html'>Santé Canada</a>",
   "top.privacy.statement": "Énoncé de confidentialité",
@@ -10,12 +10,12 @@
   "refresh.file.input": "Actualisez cette page",
   "error":"Erreur {{number}}:",
   "heading.transaction": "Inscription à la transaction réglementaire",
-  "dossier.id": "Numéro de dossier",
+  "dossier.id": "Numéro de dossier (composé d’un « m » minuscule suivie de 6 chiffres)",
   "dossier.type": "Type de dossier",
-  "manufacturing.company.id": "Numéro d’identification du fabricant",
-  "manufacturing.contact.id": "Identificateur du contact du fabricant",
-  "regulatory.company.id": "Identifiant de la compagnie de réglementation",
-  "regulatory.contact.id": "Identificateur du contact réglementaire",
+  "manufacturing.company.id": "Identification de la compagnie du fabricant",
+  "manufacturing.contact.id": "Identifiant du contact du fabricant",
+  "regulatory.company.id": "Identifiant de la compagnie réglementaire",
+  "regulatory.contact.id": "Identifiant du contact réglementaire",
   "activity.type": "Type d'activité réglementaire",
   "trans.description": "Description de la transaction",
   "device.class": "Catégorie d'instruments",
@@ -23,27 +23,24 @@
   "licence.number": "Numéro de licence",
   "application.number": "Numéro de la demande",
   "meeting.id": "Identifiant de la réunion",
-  "device.name": "Nom de l'appareil, tel qu'il apparaît sur l'étiquette",
+  "device.name": "Nom d'instrument, tel qu'il apparaît sur l'étiquette",
   "licence.name": "Nom proposé pour la licence",
-  "include.ddt": "Joignez à cette demande la feuille de calcul Détails de l'instrument avec la feuille correspondante « changement de nom de l'instrument » remplie.",
-  "request.date": "Date de la demande (AAAA-MM-JJ)",
+  "include.ddt": "Joignez à cette demande le fichier Excel de détails de l'instrument avec la feuille correspondante « changement de nom de l'instrument » remplie.",
+  "request.date": "Date de la demande",
   "brief.descr": "Brève description",
-  "has.ddt": "Tableau des détails de l'instrument inclus?",
-  "has.app.info": "Informations sur la demande XML inclus dans la transaction?",
+  "has.ddt": "Fichier Excel de détails de l'instrument inclus?",
   "fees": "Frais",
   "are.fees": "De nouveaux frais ou des frais révisés sont-ils associés à cette transaction?",
-  "billing.company.id": "Identifiant de l'entreprise de facturation",
+  "billing.company.id": "Identifiant de la compagnie de facturation",
   "billing.contact.id": "Identifiant du contact de facturation",
-  "completed.fee.required":"Un formulaire de frais complété est toujours requis, cependant, les frais applicables seront facturés.",
+  "completed.fee.required":"Les frais applicables seront facturés; cependant, un formulaire de frais complété est toujours requis.",
   "required": "Ce champ est obligatoire.",
   "minlength": "Minimum de",
-  "error.mgs.number": "fr_Please specify a number.",
-  "error.mgs.dossier.id": "Numéro de dossier - doit contenir une lettre minuscule suivie de 6 chiffres",
+  "error.mgs.dossier.id": "Doit contenir un « m » minuscule suivie de 6 chiffres",
   "error.mgs.5.numeric": "Doit contenir 5 chiffres",
   "error.mgs.6.numeric": "Doit contenir 6 chiffres",
   "error.mgs.contact.id": "Doit contenir 5 chiffres",
   "error.mgs.licence.number": "Doit contenir 6 chiffres - Ajouter un 0 au début de la séquence si la licence contient moins de 6 chiffres",
-  "error.mgs.application.number": "fr_Please specify a valid application number.",
   "error.msg.invalidDate": "Cette date n'est pas valide",
   "commmon.required.bracket": " (obligatoire)",
   "errorSummary.transaction": "Formulaire de transaction",
@@ -53,7 +50,6 @@
   "minNumber5": "(5 chiffres)",
   "minNumber6": "(6 chiffres)",
   "minNumber8": "(8 chiffres)",
-  "minAlphanum6.m": "(composé d’un m minuscule suivie de 6 chiffres)",
   "reason.amend": "Raison du dépôt de cet amendement",
   "save.working.copy": "Enregistrer une copie de travail",
   "generate.final": "Générer le XML final",
@@ -72,23 +68,25 @@
   "template.version": "Version du modèle: ",
   "rationale": "Justification",
   "proposed.indication": "Objectif proposé / indication d'utilisation",
-  "section.show.option": "[ Cette section peut ne pas être visible. ]",
+  "section.show.option": "[ Cette section peut ne pas être visible. ] ",
   "PROTECTED_B": "Protégé \"B\" une fois rempli",
-  "original.manufacturing.company.id": "Identifiant de l'entreprise du fabricant d'origine",
+  "original.manufacturing.company.id": "Identifiant de la compagnie du fabricant d'origine",
   "original.manufacturer.licence.number": "Numéro de licence du fabricant d'origine",
   "help.load.file.02": "Lorsque vous continuez avec une copie de travail, le format du fichier à charger doit être .hcsc.",
   "help.load.file.03": "Lors de la visualisation / mise à jour d'un fichier XML final, le format du fichier à charger doit être .xml.",
-  "help.transaction.01": "L'identifiant de l'entreprise doit être obtenu à partir du fichier XML final de l'entreprise, émis par Santé Canada.",
+  "help.transaction.01": "L'identifiant de la compagnie doit être obtenu à partir du fichier XML final de la compagnie, émis par Santé Canada.",
   "help.transaction.02": "L'identifiant du dossier peut être obtenu à partir du fichier XML du dossier final ou d'un autre document émis par Santé Canada. (par exemple : m178974) ",
-  "help.dossierId.01": "L'identificateur de dossier est un code créé par Santé Canada pour identifier le dossier de façon unique. Si un ID de dossier n’a pas encore été attribué, les fabricants promoteurs doivent en faire la demande en remplissant le formulaire de demande d’ID de dossier de l’instrument médical.",
-  "help.dossierId.02": "Le format de l’identificateur de dossier est composé d'une lettre minuscule suivie de six chiffres (par exemple m######). ",
-  "help.contactId": "Toute correspondance réglementaire sera envoyée à ce contact, mais la licence sera livrée au fabricant. Une demande d'homologation de dispositif médical peut être soumise par un tiers.",
+  "help.dossierId.01": "Identifiant de dossier - L'identifiant de dossier est un code créé par Santé Canada pour identifier le dossier de façon unique. Si un ID de dossier n’a pas encore été attribué, les fabricants promoteurs doivent en faire la demande en remplissant le formulaire de demande d’ID de dossier de l’instrument médical.",
+  "help.dossierId.02": "Le format de l'identifiant de dossier est composé d'un « m » minuscule suivie de six chiffres (par exemple m######). ",
+  "help.contactId": "Toute correspondance réglementaire sera envoyée à ce contact, mais la licence sera livrée au fabricant. Une demande d'homologation de l'instrument médical peut être soumise par un tiers.",
   "help.deviceClass.01": "Veuillez consulter ",
   "help.deviceClass.02": "la Ligne directrice - Orientation sur le système de classification fondé sur le risque des instruments autres que les instruments diagnostiques in vitro (IDIV)",
   "help.deviceClass.url": "https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/instruments-medicaux/information-demandes/lignes-directrices/ligne-directrice-orientation-systeme-classification-instruments.html",
   "help.application.number": "Ce numéro est attribué par Santé Canada pour chaque demande/transaction reçue",
-  "help.device.name": "Un seul nom doit être saisi dans ce champ. Le nom indiqué sera utilisé comme nom de licence, sauf s'il est jugé qu'un nom de licence générique est plus approprié pour couvrir tous les appareils contenus dans la licence.",
-  "help.licence.number.01": "Ce numéro est attribué par Santé Canada une fois que la vente d'un ou plusieurs dispositifs a été autorisée.",
+  "help.device.name": "Un seul nom doit être saisi dans ce champ. Le nom indiqué sera utilisé comme nom de licence, sauf s'il est jugé qu'un nom de licence générique est plus approprié pour couvrir tous les instruments contenus dans la licence.",
+  "help.licence.number.01": "Ce numéro est attribué par Santé Canada une fois que la vente d'un ou plusieurs instruments a été autorisée.",
   "help.licence.number.02": "Si le numéro de licence n'a pas encore été attribué, utilisez 000000.",
-  "help.device.detail": "Les identifiants figurant dans le tableau des détails du dispositif doivent apparaître sur l'étiquetage soumis et correspondre à l'identifiant figurant sur celui-ci."
+  "help.device.detail.01": "Les identifiants figurant dans le fichier Excel de détails de l'instrument doivent apparaître sur l'étiquetage soumis et correspondre à l'identifiant figurant sur celui-ci.",
+  "help.device.detail.02": "Obligatoire pour toutes les nouvelles demandes d’homologation, ainsi que pour toute demande de modification susceptible d’avoir des répercussions sur le répertoire des fabricants.",
+  "help.device.detail.03": "Le fichier Excel de détails de l'instrument est disponible sur la page <a href='https://lam-dev.hres.ca/REP-Form/mds_index-fr.html'>d’index du PIR pour les instruments médicaux.</a>"
 }  
