REP MD AI V3.0.0 Deployment 2024-05-01

--- a/mds/applicationInfo/en/assets/i18n/fr.json
+++ b/mds/applicationInfo/en/assets/i18n/fr.json
@@ -5,6 +5,7 @@
     "top.privacy.statement": "Énoncé de confidentialité",
     "top.security.declaimer": "Avis de non-responsabilité concernant la sécurité",
     "top.instruction": "Instructions",
+    "PROTECTED_B": "Protégé \"B\" une fois rempli", 
     "select.file": "Sélectionnez un fichier à charger",
     "load.file": "Charger un fichier d'inscription d’information sur les demandes d’homologation",
     "error":"Erreur {{number}}:",
@@ -47,7 +48,7 @@
     "heading.standard.list": "fr_List of Recognized Standards Complied with in the manufacture of the Device",
     "heading.device.material": "Instruments contenant du matériel biologique",
     "heading.materials": "Attributs des matières biologiques",
-    "heading.material": "Matériel biologique {{seqnumber}}",
+    "heading.biological.material": "Matériel biologique {{seqnumber}}",
     "heading.material.record": "fr_Biological Material Record",
     "device.name": "Nom de l'instrument compatible (Si pas disponible, utilisez « sans objet »)",
     "licence.number": "Numéro de licence",
@@ -101,18 +102,17 @@
     "no": "Non",
     "minlength": "fr_Minimum length 10",
     "error.mgs.minlength":"Il doit y avoir {{ requiredLength }} chiffres",
-    "error.mgs.minlenWithM": "Doit contenir m + {{ requiredLength }} chiffres",
+    "error.mgs.dossier.id": "Entrée non valide - doit contenir m + 6 chiffres",
     "error.mgs.6.numeric":"Entrée non valide - doit contenir 6 chiffres",
     "error.mgs.8.numeric":"Entrée non valide - doit contenir 8 chiffres",
-    "error.mgs.company.id": "fr_Please specify a valid company ID.",
-    "error.mgs.dossier.id": "fr_Please specify a valid dossier ID.",
+    "error.mgs.company.id": "Entrée non valide: doit contenir 6 chiffres",
     "error.mgs.licence.number": "fr_Please specify a valid Licence Number.",
     "error.msg.material.one.record": "Nécessite au moins un attribut de matériel biologique",
     "errorSummary.application-info": "Le formulaire d'application d'information",
     "error.msg.deviceDetails": "L'enregistrement d'instruments interdépendants contient des erreurs",
     "error.msg.bioMaterials": "Le dossier de matériel biologique contient des erreurs",
-    "error.found.plural": " fr_errors were found",
-    "error.found.singular": " fr_error was found",
+    "error.found.plural": " erreurs ont été trouvées.",
+    "error.found.singular": " erreur a été trouvée.",
     "appl.status": "fr_Enrolment Status",
     "enrol.version": "fr_Enrolment Version",
     "date.saved": "fr_Date Last Saved",
@@ -145,7 +145,7 @@
     "help.refer.to": "Veuillez consulter la ",
     "help.lic.app.type_1": "https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/instruments-medicaux/information-demandes/lignes-directrices/directive-concernant-interpretation-articles-28-31-type-homologation.html",
     "help.lic.app.type_2": "Directive concernant l'interprétation des articles 28 à 31 : type de demande d'homologation",
-    "help.device.class_1": "(https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/instruments-medicaux/information-demandes/lignes-directrices/ligne-directrice-orientation-systeme-classification-instruments.html",
+    "help.device.class_1": "https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/instruments-medicaux/information-demandes/lignes-directrices/ligne-directrice-orientation-systeme-classification-instruments.html",
     "help.device.class_2": " Ligne directrice - Orientation sur le système de classification fondé sur le risque des instruments autres que les instruments diagnostiques in vitro (IDIV)",
     "help.confm.declar_1": "https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/instruments-medicaux/information-demandes/formulaires/declaration-conformite-formulaires-instruments-medicaux.html",
     "help.confm.declar_2": "Déclaration de la conformité",
