REP MD AI V3.0.0 Deployment 2024-05-14

--- a/mds/applicationInfo/en/assets/i18n/fr.json
+++ b/mds/applicationInfo/en/assets/i18n/fr.json
@@ -8,7 +8,6 @@
     "PROTECTED_B": "Protégé \"B\" une fois rempli", 
     "select.file": "Sélectionnez un fichier à charger",
     "load.file": "Charger un fichier d'inscription d’information sur les demandes d’homologation",
-    "error":"Erreur {{number}}:",
     "application-info.enrolment": "fr_Regulatory Application Information Enrolment",
     "heading.app-info": "Information sur le demande d’homologation",
     "company.id": "Numéro d’identification du fabricant",
@@ -116,16 +115,19 @@
     "appl.status": "fr_Enrolment Status",
     "enrol.version": "fr_Enrolment Version",
     "date.saved": "fr_Date Last Saved",
-    "save.working.copy": "Enregistrer une copie de travail",
+    "save.working.copy": "Enregistrer la copie de travail",
     "generate.final": "Enregistrer la version finale XML",
     "msg.success.load": "Le fichier a été chargé avec succès",
-    "msg.err.parseFail": "Erreur: il y a eu une erreur en analysant le fichier de travail.",
-    "msg.err.jsonparse": "Il y a eu une erreur en analysant le fichier de travail.",
-    "msg.err.xmlparse": "fr_There was an error parsing the draft XML file.",
+    "msg.err.parse.fail": "Erreur: il y a eu une erreur en analysant le fichier.",
     "msg.err.file.load": "Il y a eu un problème lors du chargement du fichier.",
     "msg.err.file.type": "Erreur: Un type de fichier invalide a été sélectionné.",
     "msg.err.form.type": "Erreur: le type de formulaire incorrect a été sélectionné pour ce formulaire.",
     "msg.err.checksum.fail": "Erreur: il y a eu une erreur en analysant le fichier.",
+    "error":"Erreur {{number}}:",
+    "msg.save.xml.popup": "Veuillez sauvegarder les données d'entrée non enregistrées avant de générer le fichier XML.",
+    "msg.save.data.popup": "Veuillez sauvegarder les données d'entrée non enregistrées.",
+    "popup.tile":"Information sur le demande d’homologation",
+    "popup.close": "Fermer",
     "minNumber5": "(5 chiffres)",
     "minNumber6": "(6 chiffres)",
     "minNumber8": "(8 chiffres)",
