--- a/mds/applicationInfo/fr/assets/i18n/en.json
+++ b/mds/applicationInfo/fr/assets/i18n/en.json
@@ -6,7 +6,6 @@
     "top.security.declaimer": "Security Disclaimer",
     "top.instruction": "Instructions",
     "select.file": "Select a file to load",
-    "error": "Error {{number}}:",
     "load.file": "Load an Application Information Enrolment File",
     "application-info.enrolment": "Regulatory Application Information Enrolment",
     "heading.app-info": "Application Information",
@@ -119,13 +118,16 @@
     "save.working.copy": "Save Working Copy",
     "generate.final": "Generate Final XML",
     "msg.success.load": "The file was loaded successfully",
-    "msg.err.parseFail": "The parsing is failed.",
-    "msg.err.jsonparse": "There was an error parsing the working file.",
-    "msg.err.xmlparse": "There was an error parsing the draft XML file.",
+    "msg.err.parse.fail": "Error: there was an error parsing the file.",
     "msg.err.file.load": "There was a problem loading the file.",
     "msg.err.file.type": "An invalid file type was selected.",
     "msg.err.form.type": "The wrong form type was selected for this form.",
     "msg.err.checksum": "Error: there was an error parsing the file.",
+    "error":"Error {{number}}:",
+    "msg.save.xml.popup": "Please save the unsaved input data before generating XML file.",
+    "msg.save.data.popup": "Please save the unsaved input data.",
+    "popup.title":"Application Information",
+    "popup.close": "Close",
     "minNumber8": "(8 numbers)",
     "minNumber6": "(6 numbers)",
     "minNumber5": "(5 numbers)",
