REP MD RT dev deployment

--- a/mds/transaction/en/assets/i18n/en.json
+++ b/mds/transaction/en/assets/i18n/en.json
@@ -25,7 +25,7 @@
   "meeting.id": "Meeting Identifier",
   "device.name": "Name of Device, as it appears on the label",
   "licence.name": "Proposed licence name",
-  "include.ddt": "Include the Device Details Excel File with the corresponding ‘device name change’ sheet completed, with this submission.",
+  "include.ddt": "Include the Device Details Excel File with the corresponding ‘device name change’ sheet completed with this submission.",
   "request.date": "Date of Request",
   "brief.descr": "Brief Description",
   "has.ddt": "Device Details Excel File included?",
@@ -54,9 +54,7 @@
   "save.working.copy": "Save Working Copy",
   "generate.final": "Generate Final XML",
   "msg.success.load": "The file was loaded successfully",
-  "msg.err.parseFail": "The parsing is failed.",
-  "msg.err.jsonparse": "There was an error parsing the working file.",
-  "msg.err.xmlparse": "There was an error parsing the draft XML file.",
+  "msg.err.parse.fail": "Error: there was an error parsing the file.",
   "msg.err.file.load": "There was a problem loading the file.",
   "msg.err.file.type": "An invalid file type was selected.",
   "msg.err.form.type": "The wrong form type was selected for this form.",
