--- a/mds/transaction/fr/assets/i18n/fr.json
+++ b/mds/transaction/fr/assets/i18n/fr.json
@@ -12,7 +12,7 @@
   "heading.transaction": "Inscription à la transaction réglementaire",
   "dossier.id": "Numéro de dossier (composé d’un « m » minuscule suivie de 6 chiffres)",
   "dossier.type": "Type de dossier",
-  "manufacturing.company.id": "Identification de la compagnie du fabricant",
+  "manufacturing.company.id": "Identifiant de la compagnie du fabricant",
   "manufacturing.contact.id": "Identifiant du contact du fabricant",
   "regulatory.company.id": "Identifiant de la compagnie réglementaire",
   "regulatory.contact.id": "Identifiant du contact réglementaire",
@@ -51,12 +51,10 @@
   "minNumber6": "(6 chiffres)",
   "minNumber8": "(8 chiffres)",
   "reason.amend": "Raison du dépôt de cet amendement",
-  "save.working.copy": "Enregistrer une copie de travail",
+  "save.working.copy": "Enregistrer la copie de travail",
   "generate.final": "Générer le XML final",
   "msg.success.load": "Le fichier a été chargé avec succès",
-  "msg.err.parseFail": "Erreur: il y a eu une erreur en analysant le fichier de travail.",
-  "msg.err.jsonparse": "Il y a eu une erreur en analysant le fichie",
-  "msg.err.xmlparse": "fr_There was an error parsing the draft XML file.",
+  "msg.err.parse.fail": "Erreur: il y a eu une erreur en analysant le fichier.",
   "msg.err.file.load": "Il y a eu un problème lors du chargement du fichier.",
   "msg.err.file.type": "Le type de formulaire incorrect a été sélectionné pour ce formulaire.",
   "msg.err.form.type": "Erreur: le type de formulaire incorrect a été sélectionné pour ce formulaire.",
