--- a/mds/company/fr/assets/i18n/en.json
+++ b/mds/company/fr/assets/i18n/en.json
@@ -35,7 +35,7 @@
     "discard.record": "Discard Record",
     "set.revise.status": "Revise Contact",
     "set.remove.status": "Delete Contact",
-    "set.active.status": "Active Contact",
+    "set.active.status": "Activate and save contact",
     "remove.contact": "Remove Contact",
     "required": "This field is required",
     "error.msg.minlength": "Minimum length {{ requiredLength }} numbers",
@@ -104,9 +104,7 @@
     "save.draft": "Save Draft XML",
     "approve.final": "Generate Final XML",
     "msg.success.load": "The file was loaded successfully",
-    "msg.err.parseFail": "The parsing is failed.",
-    "msg.err.jsonparse": "There was an error parsing the working file.",
-    "msg.err.xmlparse": "There was an error parsing the draft XML file.",
+    "msg.err.parse.fail": "Error: there was an error parsing the file.",
     "msg.err.file.load": "There was a problem loading the file.",
     "msg.err.file.type": "An invalid file type was selected.",
     "msg.err.form.type": "The wrong form type was selected for this form.",
@@ -123,8 +121,8 @@
     "PROTECTED_B": "Protected \"B\" when completed",
     "mailto.label": "Submit to Health Canada",
     "help.load.file.01": "A file should not be loaded if this is the first time enrolling the Company.",
-    "help.load.file.02": "When continuing with a working copy, the format of the file to load should be (.hcsc).",
-    "help.load.file.03": "When viewing/updating a draft or final XML file, the format of the file to load should be (.xml).",
+    "help.load.file.02": "When continuing with a working copy, the format of the file to load should be .hcsc.",
+    "help.load.file.03": "When viewing/updating a draft or final XML file, the format of the file to load should be .xml.",
     "help.load.file.04": "Refresh template prior to loading file. Always load file into blank template.",
     "help.heading.01": "The “Enrolment Status”, and “Date Generated” fields are automatically filled by the form upon selecting “Save Working Copy” or “Save Draft XML” in the bottom of the template.",
     "help.heading.02": "The “Company Identifier” field will be filled by Health Canada when they generate the final company XML file.",
@@ -139,7 +137,8 @@
     "help.routing.id.01": "The routing identifier is a unique identifier within the Common Electronic Submissions Gateway (CESG) for each account, used to identify the specific gateway account, whether it uses the Applicability Statement 2 (AS2) or WebTrader interfaces.",
     "help.routing.id.02": "For any further questions on the routing identifier, please contact the Food and Drug Administration Help Desk at ",
     "help.add.record":"If the 'Add Record' button is not active, click on the 'Amend Enrolment' button  or ensure all contact records are saved properly.",
-    "help.licence.num": "List all impacted licences, separated by a hard return (can copy and paste).",
+    "help.licence.num.01": "List all impacted licences, separated by a hard return (can copy and paste).",
+    "help.licence.num.02": "This field will automatically add leading zero if the Health Canada issued licence number is less than 6 digits.",
     "mailto.01": "The draft CO XML must be sent via email.",
     "mailto.02": "By clicking this button, a templated email message should be auto-created using your default email program. Before submitting, please attach your draft CO XML file.",
     "mailto.03": "If an email was not automatically created, you can create an email and include the following:",
@@ -151,5 +150,9 @@
     "des.renewal": "Designated renewal contact (for manufacturer only)",
     "des.finance": "Designated finance contact (for manufacturer only)",
     "comp.admin.info":"Please include the cover page of each impacted licence, a valid Medical Device Single Audit Program [MDSAP] Certificate that reflects the change in the manufacturer’s name or address, a completed F202 form, and a signed attestation form as applicable.",
-    "error":"Error {{number}}:"
+    "error":"Error {{number}}:",
+    "msg.save.xml.popup": "Please save the unsaved input data before generating XML file.",
+    "msg.save.data.popup": "Please save the unsaved input data.",
+    "popup.title": "Company Template",
+    "popup.close": "Close"
   }
