--- a/master-file/en/assets/i18n/fr.json
+++ b/master-file/en/assets/i18n/fr.json
@@ -1,5 +1,5 @@
 {
-  "master.file.form.title": "Formulaire de demande de fiches maîtresses",
+  "form.title": "Formulaire de demande de fiches maîtresses",
   "version": "Version ",
   "top.fromHC": "De <a href='https://www.canada.ca/fr/sante-canada.html'>Santé Canada</a>",
   "top.toc": "Table de matières",
@@ -10,7 +10,9 @@
   "instruction.help": "Instructions pour compléter les sections du formulaire",
   "load.file": "Télécharger un formulaire de demande de fiche maîtresse",
   "select.file": "Sélectionnez un fichier à télécharger",
-  "select.file.line": "Les nouveaux utilisateurs du formulaire ne peuvent pas sélectionner et télécharger un fichier. Ceci étant dit, ils doivent créer un fichier XML en remplissant les champs obligatoires ci-dessous et en cliquant sur le bouton «Générer le XML» au bas du formulaire.<br />Pour les utilisations ultérieures de ce formulaire, vous pouvez soit télécharger un fichier en cliquant sur le bouton «Choisir un fichier» et en sélectionnant le fichier en format «.hcsc» ou «.xml», soit remplir les champs obligatoires ci-dessous afin de générer un fichier «.xml».<br />Si vous remplissez partiellement le formulaire et souhaiter procéder ultérieurement, cliquez sur le bouton «Enregistrer la copie de travail» au bas du formulaire. Une copie sera enregistrée sur le poste de travail en format «.hcsc». Si vous utilisez un fichier«.xml» précédemment soumis, veuillez mettre à jour les champs appropriés et vérifier que les détails sont exacts pour la transaction actuelle avant de déposer le formulaire.<br />Remarque : les copies de travail (fichiers portant l'extension .hcsc) ne doivent jamais être envoyées à Santé Canada.",
+  "choose.file":"Choisir le fichier",
+  "no.file.chosen": "Aucun fichier choisi",
+  "refresh.file.input": "Actualisez cette page",
   "master.file.enrolment": "fr_Regulatory Master File Transaction and Application Enrolment",
   "instruction.dossier.id.line1": "Dossier formaté eCTD - e123456<br />Dossier formaté non-eCTD - f1234567",
   "instruction.dossier.id.line2": "En cas de dépôt d'une <strong>NOUVELLE</strong> demande d'enregistrement d'une fiche maîtresse, demander un nouvel ID de dossier eCTD en remplissant <a href='https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/formulaire-demande-id-dossiers-fiches-maitresses.html'>le Formulaire de demande pour les ID de dossiers Fiches maîtresses</a> en ligne.",
@@ -38,9 +40,7 @@
   "fileio.msg.fileTypeError": "fr_File Type Error",
   "fileio.msg.dataTypeError": "fr_Error: the wrong form data was selected for this form.",
   "required": "Ce champ est obligatoire.",
-  "minlength": "Minimum de ",
-  "minlength.number": " numéros",
-  "minlength2": " caractères",
+  "error.msg.minlength": "Minimum de {{ requiredLength }} numéros",
   "error.mgs.number": "fr_Please specify a number.",
   "error.mgs.dossier.id": "Format incorrect.",
   "error.mgs.company.id": "fr_Please specify a valid manufacturer company Identifier.",
@@ -48,7 +48,7 @@
   "error.mgs.regu.contact.id": "fr_Please specify a valid regulatory manufacturer contact Identifier.",
   "error.mgs.incorrectFormat": "Format incorrect.",
   "error.msg.postal": "Ce format n'est pas valide",
-  "error.msg.zip": "Ce format n'est pas valide",
+  "error.mgs.zip": "Ce format n'est pas valide",
   "error.msg.phone": "Ce format n'est pas valide",
   "error.msg.email": "Ce format n'est pas valide",
   "error.msg.fax": "Ce format n'est pas valide",
@@ -58,7 +58,7 @@
   "discard.changes": "fr_Discard Changes",
   "commmon.required.bracket": " (obligatoire)",
   "common.saveRevert": "fr_Please save or revert the record",
-  "error.found.title": "Le formulaire de demande de fiches maîtresses",
+  "errorSummary.masterfile": "Le formulaire de demande de fiches maîtresses",
   "error.found.because": " n’a pas pu être sauvegardé car ",
   "error.found.plural": " erreurs ont été trouvées ",
   "error.found.singular": " erreur a été trouvée ",
@@ -75,7 +75,7 @@
   "msg.err.file.load": "Il y a eu un problème lors du chargement du fichier.",
   "msg.err.file.type": "Erreur: Un type de fichier invalide a été sélectionné.",
   "msg.err.form.type": "Erreur: le type de formulaire incorrect a été sélectionné pour ce formulaire.",
-  "msg.err.checksum.fail": "fr_The checksum in the file does not match the calculated checksum",
+  "msg.err.checksum": "Erreur: il y a eu une erreur en analysant le fichier.",
   "error.msg.number": "fr_Please enter a valid number",
   "return.instruction": "Revenir à la référence de l'instruction",
   "section.show.option": "[ Cette section peut ne pas être visible. ]",
@@ -135,8 +135,6 @@
   "who.responsible": "Qui paiera les frais?",
   "account.num": "Numéro de compte du client (si émis)",
   "business.num": "Numéro d’entreprise de l'Agence du revenu du Canada (le cas échéant)",
-  "mf.holder": "Propriétaire de la fiche maîtresse",
-  "mf.agent": "Agent autorisé de la fiche maîtresse / Tiers au nom du titulaire autorisé",
   "contactInfoConfirm": "Confirmation des coordonnées",
   "certify.info": "Je certifie que les informations et le matériel contenus dans cette demande/transaction de la fiche maîtresse sont exacts et complets.",
   "certifyAccurateComplete": "Attestation de l’exactitude et de la complétude",
@@ -148,10 +146,11 @@
   "consent.privacy": "En soumettant vos renseignements personnels, vous consentez à sa collecte, à son utilisation et à sa divulgation conformément à l'énoncé de confidentialité.",
   "consentPrivacy": "Consentement de confidentialité",
   "alert.info": "Informations d'alerte",
-  "error": "Erreur ",
+  "error": "Erreur {{number}}:",
   "agent.not.applicable":"Le nom et l'adresse de l’agent autorisé ou du tiers autorisé ne sont pas applicables.",
   "postal.not.applicable":"(Si pas disponible, utilisez « sans objet »)",
   "req.revision":"La demande de clarification vous a-t-elle obligé à réviser la description de la transaction?",
-  "revised.transaction.description":"Description de la transaction révisée"
+  "revised.transaction.description":"Description de la transaction révisée",
+  "purpose.of.collection":"Santé Canada a besoin des renseignements personnels pour traiter les formulaires de demande réglementaire. Les informations que vous fournissez peuvent être utilisées pour vous contacter afin de vérifier les informations fournies, d'évaluer la faisabilité de l'inscription d'entreprises, de dossiers et de suivre les activités et transactions réglementaires."
 
 }
