--- a/master-file/fr/assets/i18n/en.json
+++ b/master-file/fr/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "master.file.form.title": "Master File Application Form",
+  "form.title": "Master File Application Form",
   "version": "Version ",
   "top.fromHC": "From <a href='https://www.canada.ca/en/health-canada.html'>Health Canada</a>",
   "top.toc": "Table of contents",
@@ -10,7 +10,9 @@
   "instruction.help": "Instructions for completing sections on form",
   "load.file": "Load a Master File Application form",
   "select.file": "Select a file to load",
-  "select.file.line": "First time users of this form cannot select a file to load and must create an XML file by completing all the required fields below and clicking on the \"Generate XML\" button at the bottom of this form. For subsequent uses of this form, you can either upload a file by clicking on the \"Choose file\" button and selecting the .hcsc file or .xml file or you can complete the required fields below to generate a .xml file.<br />If you partially complete the form and click on the \"Save Working Copy\" button at the bottom of the form it will save a copy on the local workstation for completion at a later time. The file will be saved in the \".hcsc\" file format. If you are using a previously submitted .xml file, please update the appropriate fields and verify that the details are accurate for the current transaction prior to filing. <br />Note: The working copies (files with extension .hcsc) should never be sent Health Canada.",
+  "choose.file":"Choose File",
+  "no.file.chosen": "No file chosen",
+  "refresh.file.input": "Refresh this page",
   "master.file.enrolment": "Regulatory Master File Transaction and Application Enrolment",
   "instruction.dossier.id.line1": "eCTD formatted dossier – e123456<br />Non-eCTD formatted dossier - f1234567",
   "instruction.dossier.id.line2": "If filing <strong>NEW</strong> master file registration, request a new eCTD dossier ID by completing the online <a href='https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/filing-submissions-electronically/dossier-id-request-form-master-files.html'>Dossier ID request form</a>.",
@@ -38,8 +40,7 @@
   "fileio.msg.fileTypeError": "File Type Error",
   "fileio.msg.dataTypeError": "Error: the wrong form data was selected for this form.",
   "required": "This field is required",
-  "minlength": "Minimum length ",
-  "minlength.number": " numbers",
+  "error.msg.minlength": "Minimum length {{ requiredLength }} numbers",
   "error.mgs.number": "Please specify a number.",
   "error.mgs.dossier.id": "Incorrect format.",
   "error.mgs.company.id": "Please specify a valid manufacturer company Identifier.",
@@ -47,7 +48,7 @@
   "error.mgs.regu.contact.id": "Please specify a valid regulatory manufacturer contact Identifier.",
   "error.mgs.incorrectFormat": "Incorrect format.",
   "error.msg.postal": "The format is not valid",
-  "error.msg.zip": "The format is not valid",
+  "error.mgs.zip": "The format is not valid",
   "error.msg.phone": "The format is not valid",
   "error.msg.email": "The format is not valid",
   "error.msg.fax": "The format is not valid",
@@ -57,7 +58,7 @@
   "discard.changes": "Discard Changes",
   "commmon.required.bracket": " (required)",
   "common.saveRevert": "Please save or revert the record",
-  "error.found.title": "Master File Application Form",
+  "errorSummary.masterfile": "Master File Application Form",
   "error.found.because": " could not be saved because ",
   "error.found.plural": " errors were found",
   "error.found.singular": " error was found",
@@ -74,7 +75,7 @@
   "msg.err.file.load": "There was a problem loading the file.",
   "msg.err.file.type": "Error: An invalid file type was selected.",
   "msg.err.form.type": "Error: the wrong form type was selected for this form.",
-  "msg.err.checksum.fail": "The checksum in the file does not match the calculated checksum",
+  "msg.err.checksum": "Error: there was an error parsing the file.",
   "error.msg.number": "Please enter a valid number",
   "return.instruction": "Return to instruction reference",
   "section.show.option": "[ This section may not be visible. ] ",
@@ -131,8 +132,6 @@
   "who.responsible": "Who is responsible for payment of fees?",
   "account.num": "Customer/Client Account Number (if issued)",
   "business.num": "Canada Revenue Agency Business Number (if applicable)",
-  "mf.holder": "Master File Holder",
-  "mf.agent": "Authorized Master File Agent / Authorized Third Party",
   "contactInfoConfirm": "Contact Information Confirmation",
   "certify.info": "I certify that the information and material included in this Master File Application/Transaction is accurate and complete.",
   "certifyAccurateComplete": "Certify Accurate and Complete",
@@ -144,10 +143,11 @@
   "consent.privacy": "By submitting your personal information, you are consenting to its collection, use and disclosure in accordance with the Privacy Notice Statement.",
   "consentPrivacy": "Consent Privacy",
   "alert.info": "Alert information",
-  "error":"Error ",
+  "error":"Error {{number}}:",
   "agent.not.applicable":"Authorized Agent or Authorized Third Party Name and Address not applicable",
   "postal.not.applicable":"(Use “not applicable” if not available)",
   "req.revision":"Did the Clarification Request require you to revise the Transaction Description?",
-  "revised.transaction.description":"Revised Transaction Description"
+  "revised.transaction.description":"Revised Transaction Description",
+  "purpose.of.collection":"Health Canada requires the personal information to process regulatory application forms. The information you provide may be used to contact you to verify provided information, to assess the feasibility of enrolling companies, dossiers, and track regulatory activities and transactions."
 
 }
