REP MD RT V3.0.1 Deployment 2024-11-12

--- a/mds/transaction/en/assets/i18n/en.json
+++ b/mds/transaction/en/assets/i18n/en.json
@@ -53,8 +53,8 @@
   "minNumber6": "(6 numbers)",
   "minNumber8": "(8 numbers)",
   "reason.amend": "Reason for amendment",
-  "save.working.copy": "Save Working Copy",
-  "generate.final": "Generate Final XML",
+  "save.working.copy": "Save working copy",
+  "generate.final": "Generate XML",
   "msg.success.load": "The file was loaded successfully",
   "msg.err.parse.fail": "Error: there was an error parsing the file.",
   "msg.err.file.load": "There was a problem loading the file.",
