--- a/mds/transaction/fr/assets/i18n/fr.json
+++ b/mds/transaction/fr/assets/i18n/fr.json
@@ -8,7 +8,7 @@
   "load.file": "Charger un fichier d'inscription de transaction réglementaire",
   "select.file": "Sélectionnez un fichier à charger",
   "refresh.file.input": "Actualisez cette page",
-  "choose.file":"Choisir le fichier",
+  "choose.file":"Choisir un fichier",
   "no.file.chosen": "Aucun fichier choisi",
   "error":"Erreur {{number}}:",
   "heading.transaction": "Inscription à la transaction réglementaire",
@@ -54,7 +54,7 @@
   "minNumber8": "(8 chiffres)",
   "reason.amend": "Raison du dépôt de cet amendement",
   "save.working.copy": "Enregistrer la copie de travail",
-  "generate.final": "Générer le XML final",
+  "generate.final": "Générer le XML",
   "msg.success.load": "Le fichier a été chargé avec succès",
   "msg.err.parse.fail": "Erreur: il y a eu une erreur en analysant le fichier.",
   "msg.err.file.load": "Il y a eu un problème lors du chargement du fichier.",
